--- a/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
@@ -87,7 +87,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btnthemthucdon"
+        android:id="@+id/btnBookmark"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="@string/them_cong_thuc_vao_thuc_don_hang_ngay"
